Bug 1560660 - Update mSystemUsesDarkTheme in the child process via caching machinery.